# recognition

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
sign_language_recognition/: bin.py
sign_language_recognition/kaggle_asl_signs/: README.md  __init__.py  kaggle_test.py
